# langgraph-zillow

./: .gitignore  LICENSE  README.md
.github/workflows/: test.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  agent.py  agui_events.py  events.py  main.py  memory.py  prompt_builder.py  server.py
backend/app/data/: loader.py
backend/app/tools/: __init__.py  knowledge_base.py  listing_details.py  property_search.py  tour_scheduler.py
backend/app/utils/: context_extractor.py  google_calendar.py  logging.py  normalizers.py
backend/tests/: __init__.py  conftest.py  test_context_extractor.py  test_memory.py  test_property_search.py  test_server.py
ui/: .env.example  README.md  index.html  package-lock.json  package.json  vitest.config.ts
ui/src/: App.jsx  cometchat-styles.css  fonts.css  main.jsx  styles.css
ui/src/__tests__/: SearchBar.test.tsx
ui/src/components/: DemoToastProvider.jsx  ListingCard.jsx  ListingGrid.jsx  ListingModal.jsx  MapPanel.jsx  SearchBar.jsx  TopBar.jsx
ui/src/constants/: filterOptions.js  sortOptions.js
ui/src/data/: listings.json
ui/src/hooks/: useAssistantChat.js  useListingsManager.js
ui/src/utils/: cometchat.js  filterMetadata.js  listingMetadata.js
